--- a/releases/consul-snapshot/index.yml
+++ b/releases/consul-snapshot/index.yml
@@ -4,4 +4,6 @@ builds:
     version: '1'
   16647869-8fb1-41d1-a265-41b71030c59c:
     version: '1.1'
+  8eae23a6-9478-4494-bcae-96b567bffc3a:
+    version: '1.2'
 format-version: '2'
