--- a/releases/consul-snapshot/index.yml
+++ b/releases/consul-snapshot/index.yml
@@ -6,4 +6,6 @@ builds:
     version: '1.1'
   8eae23a6-9478-4494-bcae-96b567bffc3a:
     version: '1.2'
+  53cba7ae-9473-4aca-9e63-2d85011d245e:
+    version: '1.3'
 format-version: '2'
